[tool.poetry]
name = "fastswarm-sdk"
version = "0.1.0"
description = "Python SDK for the FastSwarm API"
authors = ["AI Assistant <ai@assistant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
sseclient-py = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
responses = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
